--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,8 @@ spring.application.name=mt-saas-backend-clean
 
 # Database - Production settings
 spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 #spring.datasource.url=${DATABASE_URL}
 #spring.datasource.username=${DATABASE_USERNAME}
 #spring.datasource.password=${DATABASE_PASSWORD}
@@ -40,12 +42,6 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-
-# OAuth2 - Facebook
-spring.security.oauth2.client.registration.facebook.client-id=${FACEBOOK_CLIENT_ID}
-spring.security.oauth2.client.registration.facebook.client-secret=${FACEBOOK_CLIENT_SECRET}
-spring.security.oauth2.client.registration.facebook.scope=email,public_profile
-spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
 # JWT
 app.jwt.secret=${JWT_SECRET}
