--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,9 @@
 spring.application.name=mt-saas-backend-clean
 
 # Database - Production settings
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #spring.datasource.url=${DATABASE_URL}
