--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,14 +47,14 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 # Email Configuration
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
 spring.mail.port=${MAIL_PORT:587}
-spring.mail.username=${MAIL_USERNAME:swiftconverter@gmail.com}
+spring.mail.username=${MAIL_USERNAME:converterswift@gmail.com}
 spring.mail.password=${MAIL_PASSWORD:your-app-specific-password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
 
 # Support Email
-app.support.email=${SUPPORT_EMAIL:swiftconverter@gmail.com}
+app.support.email=${SUPPORT_EMAIL:converterswift@gmail.com}
