--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,16 +45,17 @@ app.jwt.secret=${JWT_SECRET:your-256-bit-secret-key-here-make-it-long-enough-for
 # Profile
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 # Email Configuration
-spring.mail.host=${MAIL_HOST:smtp.gmail.com}
-spring.mail.port=${MAIL_PORT:587}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.protocol=smtps
 spring.mail.username=${MAIL_USERNAME:converterswift@gmail.com}
 spring.mail.password=${MAIL_PASSWORD:your-app-specific-password}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=10000
-spring.mail.properties.mail.smtp.timeout=10000
-spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=15000
+spring.mail.properties.mail.smtp.timeout=15000
+spring.mail.properties.mail.smtp.writetimeout=15000
 
 # Support Email
 app.support.email=${SUPPORT_EMAIL:converterswift@gmail.com}
